crates/specforge-cli/tests/snapshots/tests__parity__format_check__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "spec/messy.spec": "behavior messy \"Messy\" {\ncategory \"core\"\ncontract \"The system MUST work\"\n}\n"
  },
  "ok": false,
  "payload": "[ROOT]/spec/messy.spec\n"
}
